# sre-portfolio

./: .golangci.yml  .testcoverage.yml  Containerfile  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  packer-validate.yml
argo/applications/: argocd.yaml  cert-manager.yaml  cilium.yaml  dragonfly-operator.yaml  external-dns.yaml  gateway-api.yaml  kube-prometheus-stack.yaml  loki.yaml  longhorn.yaml  opentelemetry-operator.yaml  opentelemetry-operator.yml  tempo.yaml  thanos.yaml
chart/scheduler/: values.yaml
cmd/scheduler/: main.go
internal/: config.go  logging.go  metrics.go  redis.go
internal/leader/: logging.go  logging_test.go  metrics.go  redis.go  test_logging.go
k8s-lab/argocd/: httproute.yaml  prometheus.yaml
k8s-lab/cert-manager/: clusterissuer.yaml  prometheus.yaml
k8s-lab/cilium/: gateway.yaml  httproute.yaml  l2announce.yaml  lbpool.yaml  prometheus.yaml
k8s-lab/external-dns/: prometheus.yaml
k8s-lab/kube-prometheus-stack/: alertmanager-config.yaml  httproute.yaml
k8s-lab/loki/: prometheus.yaml
k8s-lab/longhorn/: httproute.yaml  prometheus.yaml
k8s-lab/otel-config/: logging.yaml
orchestrator/: README.md
orchestrator/python/: pyproject.toml
orchestrator/python/orchestrator/: __init__.py  manager.py  node.py  scheduler.py  task.py  worker.py
packer/: README.md  main.pkr.hcl  vars.pkr.hcl
pkg/leader/: redis.go  (+1 more)
scheduler/: .testcoverage.yml  Containerfile  Makefile  README.md  go.mod  go.sum
terraform/: .terraform.lock.hcl  README.md  main.tf  terraform.tf  terraform.tfvars.json  user-data.sh  variables.tf
(+59 files in other folders)
