[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = ""
authors = ["Tyler Christiansen <code@tylerc.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.1"
docker = "^7.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9"
black = "^24.4.0"
prospector = "^1.10.3"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "orchestrator:main"
